# codestrands

./: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 20230121064453_add_authentication.up.sql  20230121065538_add_user_update_trigger.down.sql  20230121065538_add_user_update_trigger.up.sql  20230121065625_add_social_links.down.sql  20230121065625_add_social_links.up.sql  20230121065912_add_skills.up.sql  20230121070525_add_user_skills.down.sql  20230121070525_add_user_skills.up.sql  20230121072747_add_interests.down.sql  20230121072747_add_interests.up.sql  20230121072836_add_user_interests.down.sql  20230121072836_add_user_interests.up.sql  20230121075211_add_user_relationships.down.sql  20230121075211_add_user_relationships.up.sql  20230121075851_add_chats.up.sql  20230121082549_add_chat_users.down.sql  20230121082549_add_chat_users.up.sql  20230121092245_add_projects.up.sql  20230121095227_add_social_link_update_trigger.down.sql  20230121095227_add_social_link_update_trigger.up.sql  20230121095402_add_user_relationship_update_trigger.down.sql  20230121095402_add_user_relationship_update_trigger.up.sql  20230121095535_add_chats_update_trigger.down.sql  20230121095535_add_chats_update_trigger.up.sql  20230121100412_add_projects_update_trigger.down.sql  20230121100412_add_projects_update_trigger.up.sql  20230121132617_add_chat_messages.up.sql  20230121134234_add_content_to_chat_messages.down.sql  20230121134234_add_content_to_chat_messages.up.sql
backend/src/: config.rs  main.rs
(+67 files in other folders)
