[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.1"
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
futures = "0.3"
log = "0.4"
paste = "1.0.6"
redis = { version = "0.21.5", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
sqlx = { version = "0.5", features = ["chrono", "migrate", "postgres", "runtime-actix-rustls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }
